<resources>
    <string name="app_name">Dictionnaire de langues</string>
    <string name="LangChoiceSummary">Anglais</string>
    <string name="LangChoiceTitle">Langue de traduction</string>
    <string name="LangChoiceCategory">Paramètres</string>
    <string name="settings">Paramètres</string>
    <string name="newWord">Nouveau mot</string>
    <string name="title_activity_new_word">Traduction d\'un mot</string>
    <string name="word_to_translate">Mot à traduire</string>
    <string name="add_to_dictionary">Ajouter au dictionnaire</string>
    <string name="translate">Traduire</string>
    <string name="plz_connect_to_internet">Veuillez vous connecter à internet !</string>
    <string name="plz_add_word">Veuillez indiquer un mot à traduire !</string>
    <string name="word_saved">Ce mot a bien été enregistré !</string>
    <string name="word_already_saved">Ce mot est déjà enregistré !</string>
    <string name="word_to_save_cannot_be_empty">Le mot à enregistrer ne peut pas être vide !</string>
    <string name="error">Il y a eu une erreur. Veuillez réessayer plus tard.</string>
    <string name="delete_word">Supprimer le mot</string>
    <string name="confirm_suppression">Confirmer la suppression</string>
    <string name="word_deleted">Le mot a bien été supprimé !</string>
    <string name="quiz">Quiz</string>
    <string name="title_activity_quiz">Quiz</string>
    <string name="quiz_explanation">Veuillez traduire les différents mots listés ci-dessous dans la langue choisie dans les paramètres.</string>
    <string name="action_settings">Settings</string>
    <string name="validate_quiz">Valider le quiz</string>
    <string name="generate_quiz">Générer le quiz</string>
    <string name="regenerate_quiz">Regénérer le quiz</string>
    <string name="show_response_quiz">Montrer les réponses</string>
    <string name="no_words_for_quiz">Il n\'y a aucun mot dans la langue sélectionnée. Veuillez ajouter des mots ou changer de langue.</string>
    <string name="errors_quiz">Certains mots sont mal traduits. Réessaie !</string>
    <string name="success_quiz">Bravo, aucune erreur !</string>
</resources>
