<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="be.ecam.dictionaryapp.QuizActivity"
    tools:showIn="@layout/activity_quiz">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/quiz_explanation" />

        <LinearLayout
            android:id="@+id/quiz_words_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_margin="@dimen/text_margin">

        </LinearLayout>

        <Button
            android:id="@+id/validate_quiz_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generate_quiz"
            android:layout_margin="@dimen/text_margin"/>

        <Button
            android:id="@+id/generate_new_quiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_response_quiz"
            android:layout_margin="@dimen/text_margin"
            android:visibility="gone"/>
    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
